<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/main_bg"
                android:orientation="vertical">

    <ImageView
        android:id="@+id/imgLogo"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:src="@drawable/chat_logo"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textColor="@color/white"
        android:textSize="35dp"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/imgLogo"
        android:textStyle="bold"/>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:padding="20dp"
        android:id="@+id/locationId"
        android:weightSum="1">

        <EditText
            android:id="@+id/name"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:layout_marginTop="100dp"
            android:background="@color/white"
            android:inputType="textCapWords"
            android:padding="10dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:text="@string/enter_name"
            android:textColor="@color/white"
            android:textSize="18dp"
            android:layout_gravity="center_horizontal"
            android:id="@+id/txtName"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/location"
            android:id="@+id/textView"
            android:layout_gravity="center_horizontal"
            android:textColor="@color/white"
            android:textStyle="italic"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/default_location"
            android:id="@+id/address"
            android:layout_gravity="center_horizontal"
            android:textColor="@color/white"
            android:textStyle="italic"/>

        <Button
            android:id="@+id/btnJoin"
            android:layout_width="107dp"
            android:layout_height="match_parent"
            android:layout_marginTop="40dp"
            android:background="@color/bg_btn_input"
            android:paddingLeft="25dp"
            android:paddingRight="25dp"
            android:text="@string/btn_join"
            android:textColor="@color/white"
            android:layout_gravity="center_horizontal"
            android:layout_weight="0.43"/>
    </LinearLayout>

</RelativeLayout>